[gd_scene load_steps=7 format=2]

[ext_resource path="res://Portal/player.gd" type="Script" id=1]
[ext_resource path="res://Presets/ItemInspector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/MousePointCast.gd" type="Script" id=3]
[ext_resource path="res://Portal/camera.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.40565
height = 0.944567

[sub_resource type="RayShape" id=2]
length = 2.37273

[node name="Player" type="KinematicBody"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -0.107005, 0.505447, 0 )
script = ExtResource( 1 )

[node name="Capsule" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.347498, 0 )
shape = SubResource( 1 )

[node name="MousePointCast" type="RayCast" parent="Capsule"]
transform = Transform( 1.11111, 0, 0, 0, -1.81023e-07, 1.11111, 0, -1.11111, -1.81023e-07, 0, -1.06104e-07, -0.65126 )
enabled = true
collide_with_areas = true
collide_with_bodies = false
script = ExtResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.998758, 0 )

[node name="Camera" type="Camera" parent="Head"]
far = 500.0
script = ExtResource( 4 )

[node name="InteractionLine" type="Area" parent="Head/Camera"]

[node name="CollisionRay" type="CollisionShape" parent="Head/Camera/InteractionLine"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="ItemInspector" parent="Head/Camera" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.57155 )

[node name="Tail" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.222547, 0 )
enabled = true
